prevent scrollbars in page footers

--- a/__MEDIA__/themes/base.css
+++ b/__MEDIA__/themes/base.css
@@ -87,6 +87,7 @@
     color:inherit;
     line-height:1.1;
     text-align:center;
+    overflow: visible;
 }
 
 .cs_base_bold {
